--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server/index.js",
-    "server": "nodemon server/index.js"
+    "server": "nodemon server/index.js",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.511.0",
-    "nodemailer": "^6.9.12",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scroll": "^1.9.0",
@@ -31,7 +32,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@types/react-scroll": "^1.8.10", 
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.25.0",
